web-infras/parser/tests/fixtures/esprima/ES6/template-literals/invalid-hex-escape-sequence/output.txt
[SyntaxError]: Invalid hexadecimal escape sequence. (1,1)
1|`\x{1}`;
 |^
